// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthorLink renders author with only name fields 1`] = `
<div
  className="di"
>
  <a
    href="//inspirehep.net/author/profile/Name, Full?recid=12345"
    target="_blank"
  >
    Full Name
  </a>
</div>
`;

exports[`AuthorLink renders full author without last_name 1`] = `
<div
  className="di"
>
  <a
    href="//inspirehep.net/author/profile/Name Full"
    target="_blank"
  >
    Name Full 
  </a>
  <span
    className="pl1 grey"
  >
    (
    <a
      href="//inspirehep.net/search?cc=Institutions&p=institution:\\"Affiliation\\""
      target="_blank"
    >
      Affiliation
    </a>
    )
  </span>
</div>
`;

exports[`AuthorLink renders full author without recordId 1`] = `
<div
  className="di"
>
  <a
    href="//inspirehep.net/author/profile/Name, Full"
    target="_blank"
  >
    Full Name
  </a>
  <span
    className="pl1 grey"
  >
    (
    <a
      href="//inspirehep.net/search?cc=Institutions&p=institution:\\"Affiliation\\""
      target="_blank"
    >
      Affiliation
    </a>
    )
  </span>
</div>
`;

exports[`AuthorLink renders with full author 1`] = `
<div
  className="di"
>
  <a
    href="//inspirehep.net/author/profile/Name, Full?recid=12345"
    target="_blank"
  >
    Full Name
  </a>
  <span
    className="pl1 grey"
  >
    (
    <a
      href="//inspirehep.net/search?cc=Institutions&p=institution:\\"Affiliation\\""
      target="_blank"
    >
      Affiliation
    </a>
    )
  </span>
</div>
`;
